chore: update types

--- a/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/en/guide/basic/auto-nav-sidebar.mdx
@@ -139,7 +139,7 @@ export type CustomLinkMeta =
       link?: string;
       collapsible?: boolean;
       collapsed?: boolean;
-      items?: _CustomLinkMetaWithoutTypeField[];
+      items: _CustomLinkMetaWithoutTypeField[];
     };
 
 export type SideMetaItem =
@@ -308,7 +308,7 @@ export type CustomLinkMeta =
       link?: string;
       collapsible?: boolean;
       collapsed?: boolean;
-      items?: _CustomLinkMetaWithoutTypeField[];
+      items: _CustomLinkMetaWithoutTypeField[];
     };
 ```
 
