--- a/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
+++ b/packages/document/docs/zh/guide/basic/auto-nav-sidebar.mdx
@@ -140,7 +140,7 @@ export type CustomLinkMeta =
       link?: string;
       collapsible?: boolean;
       collapsed?: boolean;
-      items?: _CustomLinkMetaWithoutTypeField[];
+      items: _CustomLinkMetaWithoutTypeField[];
     };
 
 export type SideMetaItem =
@@ -311,7 +311,7 @@ export type CustomLinkMeta =
       link?: string;
       collapsible?: boolean;
       collapsed?: boolean;
-      items?: _CustomLinkMetaWithoutTypeField[];
+      items: _CustomLinkMetaWithoutTypeField[];
     };
 ```
 
