--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -19,7 +19,7 @@ First, add the following configuration to your config file:
 ```ts
 // rspress.config.ts
 import path from 'path';
-import { defineConfig } from 'rspress';
+import { defineConfig } from '@rspress/core';
 import { pluginAlgolia } from '@rspress/plugin-algolia';
 
 export default defineConfig({
