--- a/packages/document/docs/zh/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/llms.mdx
@@ -18,7 +18,7 @@ import { PackageManagerTabs } from '@theme';
 
 ```ts
 // rspress.config.ts
-import { defineConfig } from 'rspress';
+import { defineConfig } from '@rspress/core';
 import { pluginLlms } from '@rspress/plugin-llms';
 
 export default defineConfig({
