--- a/packages/document/docs/en/plugin/official-plugins/llms.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/llms.mdx
@@ -18,7 +18,7 @@ Add the following configuration to your configuration file:
 
 ```ts
 // rspress.config.ts
-import { defineConfig } from 'rspress';
+import { defineConfig } from '@rspress/core';
 import { pluginLlms } from '@rspress/plugin-llms';
 
 export default defineConfig({
