--- a/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/api-docgen.mdx
@@ -19,7 +19,7 @@ import { PackageManagerTabs } from '@theme';
 ```ts
 // rspress.config.ts
 import path from 'path';
-import { defineConfig } from 'rspress';
+import { defineConfig } from '@rspress/core';
 import { pluginApiDocgen } from '@rspress/plugin-api-docgen';
 
 export default defineConfig({
