--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -467,7 +467,7 @@ export default defineConfig({
 
 ## ssg
 
-- Type: `boolean`
+- Type: `boolean | { experimentalWorker?: boolean; experimentalLoose?: boolean; }`
 - Default: `true`
 
 是否开启静态站点生成。Rspress 默认开启该功能，生成 SSG 产物。
@@ -491,6 +491,20 @@ SSG 要求源码支持在 SSR 下编译，如果使用了不兼容 SSR 场景下
 2. 设置 `ssg` 为 `false`，但是会失去 SSG 功能。
 
 :::
+
+### experimentalWorker
+
+- Type: `boolean`
+- Default: `false`
+
+开启后可以使用 Worker 来加速 SSG 过程，适合大型文档站点，底层基于 [tinypool](https://github.com/tinylibs/tinypool)。
+
+### experimentalLoose
+
+- Type: `boolean`
+- Default: `false`
+
+开启后将忽略一些 SSG 过程中的错误，继续生成其他页面，但部分页面的 SSG 会缺失，适合用于大型文档站点绕过一小部分页面的 SSG 错误，不建议主动开启。
 
 ## replaceRules
 
