--- a/packages/document/docs/zh/api/config/config-basic.mdx
+++ b/packages/document/docs/zh/api/config/config-basic.mdx
@@ -497,7 +497,7 @@ SSG 要求源码支持在 SSR 下编译，如果使用了不兼容 SSR 场景下
 - Type: `boolean`
 - Default: `false`
 
-开启后可以使用 Worker 来加速 SSG 过程，适合大型文档站点，底层基于 [tinypool](https://github.com/tinylibs/tinypool)。
+开启后可以使用 Worker 来加速 SSG 过程并降低内存占用，适合大型文档站点，底层基于 [tinypool](https://github.com/tinylibs/tinypool)。
 
 ### experimentalLoose
 
