--- a/packages/document/docs/en/api/config/config-basic.mdx
+++ b/packages/document/docs/en/api/config/config-basic.mdx
@@ -468,7 +468,7 @@ export default defineConfig({
 
 ## ssg
 
-- Type: `boolean`
+- Type: `boolean | { experimentalWorker?: boolean; experimentalLoose?: boolean; }`
 - Default: `true`
 
 Whether to enable static site generation. Rspress enable it by default to generate CSR outputs and SSG outputs.
@@ -492,6 +492,20 @@ SSG requires the source code to support SSR. If the code is not compatible to SS
 2. Set `ssg: false`, but the SSG feature will be lost.
 
 :::
+
+### experimentalWorker
+
+- Type: `boolean`
+- Default: `false`
+
+After enabled, you can use worker to accelerate the SSG process and reduce memory usage. It is suitable for large document sites and is based on [tinypool](https://github.com/tinylibs/tinypool).
+
+### experimentalLoose
+
+- Type: `boolean`
+- Default: `false`
+
+After enabled, some errors in the SSG process will be ignored and other pages will continue to be generated, but the SSG of some pages will be missing. It is suitable for SSG errors that are used by large document sites to bypass a small number of pages. It is not recommended to actively enable them.
 
 ## replaceRules
 
