feat(plugin-sitemap): init @rspress/plugin-sitemap

--- a/packages/document/docs/en/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/algolia.mdx
@@ -14,7 +14,7 @@ import { PackageManagerTabs } from '@theme';
 
 ## Usage
 
-First, add the following configuration to your config file:
+First, add the following configuration to `rspress.config.ts`:
 
 ```ts
 // rspress.config.ts
