--- a/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/algolia.mdx
@@ -14,7 +14,7 @@ import { PackageManagerTabs } from '@theme';
 
 ## 使用
 
-首先在配置文件中写入以下的配置：
+首先在 `rspress.config.ts`中写入以下的配置：
 
 ```ts
 // rspress.config.ts
