chore: update from copilot

--- a/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
@@ -70,8 +70,8 @@ interface CustomMaps {
   [prop: string]: Sitemap;
 }
 
-export interface Options {
-  domain?: string;
+export interface PluginSitemapOptions {
+  siteUrl?: string;
   customMaps?: CustomMaps;
   defaultPriority?: Priority;
   defaultChangeFreq?: ChangeFreq;
