--- a/packages/document/docs/zh/plugin/official-plugins/rss.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/rss.mdx
@@ -167,7 +167,7 @@ import { pluginRss } from '@rspress/plugin-rss';
 export default defineConfig({
   base: '/base/',
   plugins: [
-    pluginSitemap({
+    pluginRss({
       siteUrl: 'https://example.com/base/',
     }),
   ],
