docs: polish doc

--- a/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
+++ b/packages/document/docs/en/plugin/official-plugins/sitemap.mdx
@@ -67,7 +67,7 @@ interface Sitemap {
 }
 
 interface CustomMaps {
-  [prop: string]: Sitemap;
+  [routePath: string]: Sitemap;
 }
 
 export interface PluginSitemapOptions {
