feat(plugin-sitemap): init @rspress/plugin-sitemap (#2416)

--- a/packages/document/docs/zh/plugin/official-plugins/rss.mdx
+++ b/packages/document/docs/zh/plugin/official-plugins/rss.mdx
@@ -156,6 +156,24 @@ export interface PluginRssOptions {
 
 当前文档站点的站点 URL。将在 RSS 文件中使用。
 
+当存在 `base` 配置时，`siteUrl` 需要包含 `base` 的路径。例如：
+
+```ts
+// rspress.config.ts
+import path from 'path';
+import { defineConfig } from '@rspress/core';
+import { pluginRss } from '@rspress/plugin-rss';
+
+export default defineConfig({
+  base: '/base/',
+  plugins: [
+    pluginRss({
+      siteUrl: 'https://example.com/base/',
+    }),
+  ],
+});
+```
+
 #### `feed`
 
 - **类型**：`FeedChannel | FeedChannel[]`
