--- a/e2e/fixtures/check-dead-link/doc/en/guide/basic/quick-start.mdx
+++ b/e2e/fixtures/check-dead-link/doc/en/guide/basic/quick-start.mdx
@@ -8,6 +8,8 @@
 
 [/guide/basic/install.mdx](/guide/basic/install.mdx)
 
+[/zh/guide/basic/install.mdx](/zh/guide/basic/install.mdx)
+
 [/en/guide/basic/install.mdx](/en/guide/basic/install.mdx)
 
 ## RelativeLinks
@@ -27,6 +29,12 @@
 [../../api](../../api)
 
 ## Corner cases
+
+[/zh](/zh)
+
+[/zh/](/zh/)
+
+[/](/)
 
 [/en](/en)
 
