--- a/e2e/fixtures/check-dead-link/doc/zh/guide/basic/quick-start.mdx
+++ b/e2e/fixtures/check-dead-link/doc/zh/guide/basic/quick-start.mdx
@@ -10,6 +10,8 @@
 
 [/zh/guide/basic/install.mdx](/zh/guide/basic/install.mdx)
 
+[/en/guide/basic/install.mdx](/en/guide/basic/install.mdx)
+
 ## 相对路径
 
 [./install](./install)
@@ -31,5 +33,11 @@
 [/zh](/zh)
 
 [/zh/](/zh/)
+
+[/](/)
+
+[/en](/en)
+
+[/en/](/en/)
 
 [/](/)
