--- a/packages/document/docs/en/guide/basic/use-mdx/link.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx/link.mdx
@@ -28,7 +28,7 @@ import { Tabs, Tab } from '@theme';
 Within the same Rspress project, it's recommended to use only one type of link format to maintain consistent code style.
 :::
 
-## File Path Format
+## File path format
 
 The file path format uses **absolute file paths** or **relative file paths** to reference specific `.md` or `.mdx` files.
 
@@ -84,7 +84,7 @@ We recommend using relative file paths as they have the following advantages:
 
 3. Compared to URL format, you don't need to consider the impact of the [`cleanUrls`](/api/config/config-basic#routecleanurls) configuration.
 
-## URL Format
+## URL format
 
 The URL format uses complete URL addresses to reference specific pages.
 
@@ -148,7 +148,7 @@ External links that are not in this docsite will automatically add `target="_bla
 
 -[Rsbuild Document](https://rsbuild.rs/)
 
-## Link Definition Syntax
+## Link definition syntax
 
 Rspress also supports markdown's alternative `definition` syntax for links, which can simplify link writing when there are many links.
 
@@ -174,7 +174,7 @@ Rspress supports [relative file paths] and [absolute file paths].
 
 </Tabs>
 
-## Dead Link Checking
+## Dead link checking
 
 During the maintenance of documentation sites, broken links often occur. Rspress provides a dead link checking feature to specifically address this troublesome maintenance issue.
 
