--- a/packages/document/docs/en/guide/basic/use-mdx/link.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx/link.mdx
@@ -176,7 +176,7 @@ Rspress supports [relative file paths] and [absolute file paths].
 
 </Tabs>
 
-## Anchor Links
+## Anchor links
 
 Rspress supports adding anchor navigation in links, using the `#` symbol to specify jumping to a specific position on the page.
 
@@ -199,7 +199,7 @@ Rspress supports adding anchor navigation in links, using the `#` symbol to spec
 </Tab>
 </Tabs>
 
-## Dead Link Checking
+## Dead links checking
 
 During the maintenance of documentation sites, broken links often occur. Rspress provides a dead link checking feature to specifically address this troublesome maintenance issue.
 
