--- a/packages/document/docs/en/api/config/config-build.mdx
+++ b/packages/document/docs/en/api/config/config-build.mdx
@@ -227,7 +227,7 @@ export default defineConfig({
 - **Type**: `boolean`
 - **Default**: `true`
 
-After enabling this config, Rspress will automatically add prefixes to links in documents based on the conventional routing table.
+After enabling this config, Rspress will automatically add prefixes to links in documents based on the conventional routing about [i18n](/guide/default-theme/i18n) and [Multi version](/guide/default-theme/multi-version).
 
 If a user writes a link `[](/guide/getting-started)` in `docs/zh/guide/index.md`, Rspress will automatically convert it to `[](/zh/guide/getting-started)`.
 
