--- a/packages/document/docs/en/guide/basic/use-mdx/link.mdx
+++ b/packages/document/docs/en/guide/basic/use-mdx/link.mdx
@@ -66,7 +66,7 @@ Here are examples from this website:
 
 :::tip
 
-When using absolute paths, the root path is the [`docs`](/api/config/config-basic#root) directory. If the project uses [internationalization](/guide/default-theme/i18n) or [multi-version](/guide/default-theme/multi-version), the [`markdown.link.loosePrefix`](/api/config/config-build#markdownlinklooseprefix) configuration will automatically add prefixes, so you can omit the language directory in links.
+When using absolute paths, the root path is the [`docs`](/api/config/config-basic#root) directory. If the project uses [internationalization](/guide/default-theme/i18n) or [multi-version](/guide/default-theme/multi-version), the [`markdown.link.autoPrefix`](/api/config/config-build#markdownlinkautoPrefix) configuration will automatically add prefixes, so you can omit the language directory in links.
 
 For example:
 
@@ -128,7 +128,7 @@ Here are examples from this website:
 
 :::tip
 
-When using absolute paths, the root path is the [`docs`](/api/config/config-basic#root) directory. If the project uses [internationalization](/guide/default-theme/i18n) or [multi-version](/guide/default-theme/multi-version), the [`markdown.link.loosePrefix`](/api/config/config-build#markdownlinklooseprefix) configuration will automatically add prefixes, so you can omit the language directory in links.
+When using absolute paths, the root path is the [`docs`](/api/config/config-basic#root) directory. If the project uses [internationalization](/guide/default-theme/i18n) or [multi-version](/guide/default-theme/multi-version), the [`markdown.link.autoPrefix`](/api/config/config-build#markdownlinkautoPrefix) configuration will automatically add prefixes, so you can omit the language directory in links.
 
 For example:
 
