--- a/packages/document/docs/zh/guide/basic/use-mdx/link.mdx
+++ b/packages/document/docs/zh/guide/basic/use-mdx/link.mdx
@@ -66,7 +66,7 @@ import { Tabs, Tab } from '@theme';
 
 :::tip
 
-当使用绝对路径时，根路径为 [`docs`](/api/config/config-basic#root) 目录。如果项目中使用了 [国际化](/guide/default-theme/i18n) 或 [多版本](/guide/default-theme/multi-version)，[`markdown.link.loosePrefix`](/api/config/config-build#markdownlinklooseprefix) 配置项会自动添加前缀，所以在链接中可以省略语言目录。
+当使用绝对路径时，根路径为 [`docs`](/api/config/config-basic#root) 目录。如果项目中使用了 [国际化](/guide/default-theme/i18n) 或 [多版本](/guide/default-theme/multi-version)，[`markdown.link.autoPrefix`](/api/config/config-build#markdownlinkautoPrefix) 配置项会自动添加前缀，所以在链接中可以省略语言目录。
 
 比如：
 
@@ -128,7 +128,7 @@ URL 形式的特点是使用完整的 URL 地址来引用到具体的页面。
 
 :::tip
 
-当使用绝对路径时，根路径为 [`docs`](/api/config/config-basic#root) 目录。如果项目中使用了 [国际化](/guide/default-theme/i18n) 或 [多版本](/guide/default-theme/multi-version)，[`markdown.link.loosePrefix`](/api/config/config-build#markdownlinklooseprefix) 配置项会自动添加前缀，所以在链接中可以省略语言目录。
+当使用绝对路径时，根路径为 [`docs`](/api/config/config-basic#root) 目录。如果项目中使用了 [国际化](/guide/default-theme/i18n) 或 [多版本](/guide/default-theme/multi-version)，[`markdown.link.autoPrefix`](/api/config/config-build#markdownlinkautoPrefix) 配置项会自动添加前缀，所以在链接中可以省略语言目录。
 
 比如：
 
